Document `POST /emotes`
