# docs/v3/swagger.json
@@ -50,6 +50,42 @@
                         }
                     }
                 }
+            },
+            "post": {
+                "description": "Upload a new emote",
+                "consumes": [
+                    "image/webp",
+                    " image/gif",
+                    " image/png",
+                    " image/apng",
+                    " image/avif",
+                    " image/jpeg",
+                    " image/tiff",
+                    " image/webm"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "emotes"
+                ],
+                "summary": "Create Emote",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Initial emote properties",
+                        "name": "X-Emote-Data",
+                        "in": "header"
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/model.Emote"
+                        }
+                    }
+                }
             }
         }
     },
